강의때 들은 게임환경 구축.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="stylesheet" />
     <title>땅따먹기</title>
   </head>
   <body>
+    <section>
+      <h1>한붓 그리기</h1>
+      <table id="stage"></table>
+    </section>
     <script src="./index.js"></script>
-    <table></table>
   </body>
 </html>
