--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <h1>한붓 그리기</h1>
       <table id="stage"></table>
     </section>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
