블록 클래스 파일 생성

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./stylesheet.css" />
-    <title>땅따먹기</title>
+    <title>한붓 그리기</title>
   </head>
   <body>
     <section>
       <h1>한붓 그리기</h1>
       <table id="stage"></table>
     </section>
-    <script src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
