아직 화면에 나타나지 않음..

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <h1>한붓 그리기</h1>
-      <table id="stage"></table>
+      <section id="stage"></section>
     </section>
     <script type="module" src="./src/index.js"></script>
   </body>
