화면 나옴. 아지 게임은 안됨.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
       <h1>한붓 그리기</h1>
       <section id="stage"></section>
     </section>
-    <script type="module" src="./src/index.js"></script>
+    <script src="./src/util.js"></script>
+    <script src="./src/item.js"></script>
+    <script src="./src/Game.js"></script>
+    <script src="./src/baseRenderer.js"></script>
+    <script src="./src/concreteRenderer.js"></script>
+    <script>
+      const game = new Game({
+        column: 6,
+        row: 6,
+        itemType: '01234'.split(''),
+        renderer: new SectionRenderer({
+          stage: '#stage',
+          bg: '../img/bg01.gif',
+          img: '../img/tower.png',
+          w: 400,
+          h: 400,
+          r: 5,
+          c: 5,
+          itemFactory: (parent, bw, bh, img) =>
+            new DivRenderer(parent, bw, bh, img)
+        })
+      });
+    </script>
   </body>
 </html>
